--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
     "typescript": "~5.6.2",
     "vite": "^6.0.1"
   }
